Fixed linter warnings